align bug fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@ body {
 }
 
 .about {
-   text-align: justify;
+   text-align: center;
 }
 
 * {
