--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -34,10 +34,12 @@
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-auto-flow: row;
   gap: 32px;
   grid-row-start: 2;
+  justify-content: center;
+  align-content: center;
 }
 
 .main ol {
